// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton matches snapshot default button 1`] = `
<button
  className="button"
  data-testid="button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Default Test!
</button>
`;

exports[`OutlineButton matches snapshot small button 1`] = `
<button
  className="button __small"
  data-testid="button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Small Test!
</button>
`;

exports[`OutlineButton matches snapshot white button 1`] = `
<button
  className="button __white"
  data-testid="button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  White Test!
</button>
`;
